--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -895,7 +895,7 @@
     <div class="section-boundary"></div>
     <section class="about-us">
         <div class="about-content">
-            <img src="C:\Users\saura\OneDrive\Desktop\NyayBot\symbol-removebg-preview.png" alt="About Us Image"
+            <img src="icon.png" alt="About Us Image"
                 class="about-image">
             <div class="about-text">
                 <h2>About Us</h2>
