--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -463,11 +463,16 @@
             <ul>
                 <li><a href="#">LAWYERS</a></li>
                 <li><a href="#">REVIEWS</a></li>
-                <li><a href="/">HOME</a></li>
+                <li><a href="intro.html">HOME</a></li>
                 <li><a href="#">CONTACT US</a></li>
             </ul>
         </div>
-        
+        <div class="contact-info" aria-label="Contact Information">
+            <div class="phone-icon" aria-label="Phone Number"> 📞+123456789</div>
+
+
+            <div class="email-icon" aria-label="Email Address">✉️ Nyaybot@gmail.com</div>
+        </div>
         <div class="select-language" aria-label="Select Language">
 
             <div id="google_element"></div>
@@ -861,7 +866,7 @@
                 photoModal.style.display = 'none';
             });
 
-            window.addEventListener('click', function (event) {x
+            window.addEventListener('click', function (event) {
                 if (event.target === photoModal) {
                     photoModal.style.display = 'none';
                 }
