added chatbot links

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1090,9 +1090,9 @@
                     <script
                         src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
                     <div class="chatbot-container">
-                        <div class="chatbot-message">How can I help you?</div>
-                        <img src="C:\Users\saura\OneDrive\Desktop\NyayBot\symbol-removebg-preview.png"
-                            alt="Chatbot Icon" class="chatbot-icon" id="chatbotIcon">
+                        <script src="https://cdn.botpress.cloud/webchat/v2.1/inject.js"></script>
+                        <script
+                            src="https://mediafiles.botpress.cloud/450f9463-b413-4632-813c-1e1448c5a378/webchat/v2.1/config.js"></script>
                     </div>
 
                     <!-- Hidden Message after Clicking the Icon -->
