--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -863,9 +863,9 @@
         </div>
         <div class="nav-links" aria-label="Main Navigation">
             <ul>
-                <li><a href="zoom.html">LAWYERS</a></li>
+                <li><a href="/info">LAWYERS</a></li>
                 <li><a href="#review">REVIEWS</a></li>
-                <li><a href="intro.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="#footer">CONTACT US</a></li>
 
             </ul>
@@ -1056,7 +1056,7 @@
                             <div class="footer-section">
                                 <h3>Quick Links</h3>
                                 <ul>
-                                    <li><a href="intro.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li><a href="#about-us">About Us</a></li>
                                     <li><a href="#services">Services</a></li>
                                     <li><a href="#footer">Contact Us</a></li>
