--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -461,9 +461,9 @@
         </div>
         <div class="nav-links" aria-label="Main Navigation">
             <ul>
-                <li><a href="#">LAWYERS</a></li>
+                <li><a href=".info">LAWYERS</a></li>
                 <li><a href="#">REVIEWS</a></li>
-                <li><a href="intro.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="#">CONTACT US</a></li>
             </ul>
         </div>
