--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -461,7 +461,7 @@
         </div>
         <div class="nav-links" aria-label="Main Navigation">
             <ul>
-                <li><a href=".info">LAWYERS</a></li>
+                <li><a href="/info">LAWYERS</a></li>
                 <li><a href="#">REVIEWS</a></li>
                 <li><a href="/">HOME</a></li>
                 <li><a href="#">CONTACT US</a></li>
