the final commit

--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -516,7 +516,7 @@
         <div class="lawyer-card">
             <img src="https://www.shutterstock.com/shutterstock/photos/2309735845/display_1500/stock-vector-vector-flat-illustration-in-white-color-in-a-black-circle-avatar-user-profile-person-icon-2309735845.jpg" alt="Lawyer Photo"
                 class="lawyer-photo"
-                data-large-src="https://imgeng.jagran.com/images/2024/feb/Fali%20S%20Nariman1708540484060.jpg">
+                data-large-src="https://www.shutterstock.com/shutterstock/photos/2309735845/display_1500/stock-vector-vector-flat-illustration-in-white-color-in-a-black-circle-avatar-user-profile-person-icon-2309735845.jpg">
             <div class="lawyer-info">
                 <h3><%= element.Name %></h3>
                 <p>Experience: <%= element.experience %></p>
@@ -530,10 +530,8 @@
 
     <div id="photo-modal" class="photo-modal">
         <span class="close-photo">&times;</span>
-        <img id="modal-photo" src="" alt="Full-Screen Photo">
+        <img id="modal-photo" src="https://www.shutterstock.com/shutterstock/photos/2309735845/display_1500/stock-vector-vector-flat-illustration-in-white-color-in-a-black-circle-avatar-user-profile-person-icon-2309735845.jpg" alt="Full-Screen Photo">
     </div>
-
-
 
     </section>
 
