--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -939,7 +939,7 @@
                 <div class="services-container">
                     <div class="service-card">
                         <div class="card-front">Judiciary Info Desk</div>
-                        <div class="card-back">The Judiciary Awareness Service is designed to empower citizens by
+                        <div class="card-back">The Judiciary Info Desk is designed to empower citizens by
                             providing comprehensive and accessible information about the Indian judiciary system. This
                             service offers a clear understanding of the structure, functioning, and processes of courts
                             in India, helping individuals navigate the legal system with confidence. It includes
