--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1092,8 +1092,7 @@
                         src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
                     <div class="chatbot-container">
                         <script src="https://cdn.botpress.cloud/webchat/v2.1/inject.js"></script>
-                        <script
-                            src="https://mediafiles.botpress.cloud/6bdf4d98-aabd-4483-8308-4e1f4348da4b/webchat/v2.1/config.js"></script>
+                        <script src="https://mediafiles.botpress.cloud/8646081f-d578-44a1-b782-a16f1608b1fc/webchat/v2.1/config.js"></script>
                     </div>
                     <!-- Hidden Message after Clicking the Icon -->
                     <div id="chatbotAction" class="hidden">
